# qvm

./: ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md  install.sh
.github/workflows/: build.yml  release.yml
docs/superpowers/specs/: 2026-05-21-tui-autopull-vnc-design.md
integration/: 01-doctor.sh  02-init.sh  06-random-user.sh  CLAUDE.md  lib.sh
src/: arch.rs  cloudinit.rs  cmd.rs  config.rs  config.sample.toml  config.sample.yml  error.rs  lib.rs  libvirt.rs  main.rs  motd.sh  style.rs  util.rs
src/commands/: cleanup.rs  clone.rs  completions.rs  console.rs  create.rs  delete.rs  doctor.rs  export.rs  flatten.rs  images.rs  import.rs  info.rs  init.rs  lifecycle.rs  mod.rs  pull.rs  resources.rs  snap.rs  vnc.rs  web.rs
src/tui/: app.rs  events.rs  forms.rs  mod.rs  onboard.rs  refresh.rs  theme.rs  ui.rs
src/web/: app.js  assets.rs  mod.rs  style.css  templates.rs
test/: 02-init.sh  03-create-debian.sh  04-create-alpine.sh  05-self-contained.sh  07-completions.sh  CLAUDE.md  README.md  run-all.sh
tests/: clone_tests.rs  cloudinit_tests.rs  config_tests.rs  export_tests.rs  libvirt_tests.rs  snap_tests.rs  tui_app_tests.rs  util_tests.rs
