[package]
name = "qvm"
version = "0.1.0"
edition = "2021"
description = "Thin, opinionated CLI for managing KVM/libvirt VMs, docker-style."
license = "MIT"

[lib]
name = "qvm"
path = "src/lib.rs"

[[bin]]
name = "qvm"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "1"
rand = "0.8"
sha-crypt = "0.5"
ratatui = "0.30.0"
crossterm = "0.29.0"
tiny_http = "0.12.0"
signal-hook = "0.4.4"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1

[dev-dependencies]
tempfile = "3"
