[package]
name = "qvm"
version = "0.1.0"
edition = "2021"
description = "Thin, opinionated CLI for managing KVM/libvirt VMs, docker-style."
license = "MIT"

[lib]
name = "qvm"
path = "src/lib.rs"

[[bin]]
name = "qvm"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "1"
rand = "0.8"
sha-crypt = "0.5"
ratatui = "0.30.0"
crossterm = "0.29.0"
qrcode = { version = "0.14", default-features = false }
owo-colors = "4.3.0"
ureq = { version = "3.3.0", default-features = false, features = ["rustls"] }

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1

[dev-dependencies]
tempfile = "3"
